# groqddbot

./: Cargo.toml  README.md
config/: sample.yaml
src/: bot.rs  chat.rs  config.rs  lib.rs  log.rs  main.rs
