[package]
name = "groqddbot"
version = "0.1.0"
edition = "2021"

[dependencies]
genai = { git = "https://github.com/franciscosbf/rust-genai" }
dashmap = "6.1.0"
serenity = "0.12"
poise = "0.6.1"
serde = "1.0.216"
config = "0.15.2"
anyhow = "1.0.94"
thiserror = "2"
simplelog = "^0.12.0"
chrono = "0.4.39"
log = "0.4.22"

[dependencies.tokio]
version = "1"
features = ["macros", "rt", "rt-multi-thread", "time"]

[dependencies.clap]
version = "4.5.3"
features = ["derive"]
